mudando para projeto emoji css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE HTML>
 <html>
+    <head>
+        <title>EMOJI :)</title>
+        <link href="style.css" rel="stylesheet">
+    </head>
     <body>
-        <h1> Hello World!</h1>
-        <h2>My first program!!!</h2>
-        <h3>Windowns CMD test</h3>
+        <h1>LOL</h1>
+        <div class="face">
+            <div class="eye-right"></div>
+            <div class="eye-left"></div>
+            <div class="mouth"></div>
+        </div>
     </body>
 </html>
