create face and center it

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>LOL</h1>
-        <div class="face">
-            <div class="eye-right"></div>
-            <div class="eye-left"></div>
-            <div class="mouth"></div>
+        <h1 class="title">LOL</h1>
+        <div class="conteiner">
+            <div class="face">
+                <div class="eye-right"></div>
+                <div class="eye-left"></div>
+                <div class="mouth"></div>
+            </div>
         </div>
     </body>
 </html>
