determinando os espaços dos olhos na div face

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
         <h1 class="title">LOL</h1>
         <div class="conteiner">
             <div class="face">
-                <div class="eye-right"></div>
-                <div class="eye-left"></div>
-                <div class="mouth"></div>
+                <div class="eye-space-right">
+                    <div class="eye"></div>
+                </div>
+                <div class="eye-space-left">
+                    <div class="eye"></div>
+                </div>
+                <div class="mouth-space">
+                    <div class="mouth"></div>
+                </div>
             </div>
         </div>
     </body>
