--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <div class="conteiner">
             <div class="face">
                 <div class="eye-space-right">
-                    <div class="eye"></div>
+                    <div class="eye-right"></div>
                 </div>
                 <div class="eye-space-left">
-                    <div class="eye"></div>
+                    <div class="eye-left"></div>
                 </div>
                 <div class="mouth-space">
                     <div class="mouth"></div>
