finalização e inicio do detalhamento

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>EMOJI :)</title>
+        <title>SMILE EMOJI :)</title>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
@@ -15,9 +15,13 @@
                     <div class="eye-left"></div>
                 </div>
                 <div class="mouth-space">
-                    <div class="mouth"></div>
+                    <div class="mouth-right-size"></div>
+                    <div class="mouth-left-size"></div>
                 </div>
             </div>
         </div>
+            <footer>
+                <p>Ass: pedro</p>
+            </footer>
     </body>
 </html>
